# opencv_cam_calibration

./: CMakeLists.txt  README.md
data/: camera_conf.xml  example_out_calibration_logitech.xml
